image and date updates

--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock and Daily Quote</title>
+
+    <style class='bkg-image'>
+        body {
+          background-image: url('/assets/pexels-aarti-vijay-2693529.jpg');
+          background-size: cover;
+          background-repeat: no-repeat;
+        }
+        </style> 
+
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet"> 
 </head>
+
 <body>
+    <br><br><br><br>
+    
     <div class="clock">
         <span class="clock-time">12:45</span>
         <span class="clock-ampm">PM</span>
+    </div>
+
+    <br><br>
+
+    <div class="message">
+        <span class="msg-text">Default text is lame</span>
 
 
     </div>
