Finalize draft for now

--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
 </head>
 
 <body>
-    <br><br><br><br>
+    <br><br><br>
     
     <div class="clock">
         <span class="clock-time">12:45</span>
         <span class="clock-ampm">PM</span>
     </div>
 
-    <br><br>
+    <br>
 
     <div class="message">
-        <span class="msg-text">Default text is lame</span>
+        <span class="day-text">This shows today's day and date</span>
+        <br><br>
+        <span class="msg-text">This shows a unique daily message</span>
+        <br><br>
+        <span class='playlist-intro'>Your daily playlist:</span>
+        <br><br>
+
+        <iframe id = "spotify-widget" src="" width="500" height="280" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
+       
+
 
 
     </div>
